# PAI

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_init.py
backend/app/: config.py  db.py  deps.py  main.py  models.py  schemas.py  security.py  seed.py
backend/app/routers/: auth.py  publiczne.py  rezerwacje.py  salki.py  wyposazenie.py
frontend/: .dockerignore  index.html  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  api.ts  auth.tsx  index.css  main.tsx
frontend/src/components/: Navbar.tsx  ProtectedRoute.tsx
frontend/src/pages/: Admin.tsx  Login.tsx  MojeRezerwacje.tsx  Publiczne.tsx  Rejestracja.tsx  SalkaSzczegoly.tsx  Salki.tsx
